# aipo-system-cc-custom

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/skills/miro-flow-maker/: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
.claude/skills/miro-flow-maker/scripts/: bootstrap.sh
.claude/skills/miro-flow-maker/scripts/miro_flow_maker/: __init__.py  __main__.py  _constants.py  _frame_helpers.py  _render_helpers.py  append_handler.py  cli.py  config.py  core.py  create_handler.py  exceptions.py  gate.py  layout.py  metadata_helper.py  (+5 more)
.claude/skills/miro-flow-maker/tests/: test_append_handler.py  test_cli.py  test_config.py  test_core.py  test_create_handler.py  test_gate.py  test_layout.py  test_metadata_helper.py  test_miro_client.py  test_reconciler.py  test_run_log.py  test_update_handler.py
.claude/skills/pptx-from-template/: .gitignore  README.md  SKILL.md  pyproject.toml  test_data.json
.claude/skills/pptx-from-template/docs/: examples.md  troubleshooting.md  usage.md
.claude/skills/pptx-from-template/scripts/: __init__.py  create_sample_template.py  data_handler.py  generate_pptx.py  integration_test.py  template_parser.py
.claude/skills/pptx-from-template/templates/: default.pptx  sample_data.json  sample_template.pptx  sample_template_16_10.pptx
tools/office-automation/: .gitignore  pyproject.toml
tools/office-automation/src/office_automation/: __init__.py  excel_ops.py  pdf_ops.py  powerpoint_ops.py  word_ops.py
tools/office-automation/tests/: test_anonymize_candidate_summary.py  test_anonymize_detect.py  test_anonymize_transform.py  test_anonymize_validate.py  test_common_files.py  test_common_images.py  test_common_metadata.py  test_excel_ops.py  test_office_anonymizer_wrapper_body_text.py  test_pdf_ops.py  test_powerpoint_ops.py  test_word_ops.py
(+160 files in other folders)
